demo/src/main/java/com/example/towerdefense/application/errors/NotFoundException.java
package com.example.towerdefense.application.errors;

public class NotFoundException extends DomainException {
    public NotFoundException(String code, String message) {
        super(404, code, message);
    }
}
